[package]
name = "jed"
version = "0.1.2"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Produces Json Iterators over instances of io.Read"
documentation = "https://softprops.github.io/jed"
homepage = "https://github.com/softprops/jed"
repository = "https://github.com/softprops/jed"
keywords = ["json","io"]
license = "MIT"

[dependencies]
rustc-serialize = "0.3.15"